# Portfolio_website

./: .env.example  Procfile  README.md  heroku_db.sqlite3  populate_projects.py  pyproject.toml
needful_things/: apps.py  urls.py  views.py
needful_things/templates/needful_things/: currency_result.html  needful_things.html  random_fact.html
pages/: urls.py  views.py
pages/templates/pages/: about.html  contact.html  hire.html  home.html
portfolio/: settings.py  urls.py
projects/: models.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_remove_project_image.py
projects/templates/projects/: projects.html
static/css/: needful_things.css  styles.css
templates/: base.html
