[tool.poetry]
name = "portfolio-website"
version = "0.1.0"
description = ""
authors = ["pavlodubovyi <133531274+pavlodubovyi@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "portfolio"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.5"
python-dotenv = "^1.0.1"
pillow = "^11.1.0"
requests = "^2.32.3"
gunicorn = "^23.0.0"
whitenoise = "^6.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
